# Sova

./: .gitignore  .gitmodules  AUDIO_ENGINE_INTEGRATION_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bali_explained.md  bazar.sova  fixes.md  fun.md  highlighting.md  important.md  impro.sova  nofloating.md  precision-fixes-implemented.md  profile-perf.sh  scenetest.sova  time.sova  timing-precision-analysis.md
bubocore/: Cargo.toml  README.md  build.rs
bubocore/examples/: bali_test_prog.rs  dummy_client.rs  play_aftertouch.rs  play_channelpressure.rs  play_clock.rs  play_control.rs  play_note.rs  play_program_change.rs  play_start_stop_reset_continue.rs  replacing_scripts.rs
bubocore/src/: clock.rs  compiler.rs  config.rs  device_map.rs  lang.rs  lib.rs  main.rs  pattern.rs  protocol.rs  scene.rs  schedule.rs  server.rs  shared_types.rs  transcoder.rs  util.rs  world.rs
bubocore/src/compiler/: bali.rs  boinx.pest  dummylang.rs
bubocore/src/compiler/bali/: bali_ast.rs  bali_compiler.rs  the_grammar_of_bali.lalrpop
bubocore/src/compiler/dummylang/: dummyast.rs  dummycompiler.rs  dummygrammar.lalrpop
bubocore/src/lang/: control_asm.rs  environment_func.rs  evaluation_context.rs  event.rs  variable.rs
bubocore/src/lang/control_asm/: tests.rs
bubocore/src/pattern/: script.rs
bubocore/src/protocol/: device.rs  error.rs  log.rs  message.rs  midi.rs  osc.rs  payload.rs
bubocore/src/protocol/midi/: control_memory.rs
bubocore/src/scene/: line.rs  script.rs
bubocore/src/schedule/: action_timing.rs  execution.rs  frame_index.rs  message.rs  notification.rs  playback.rs  scheduler_actions.rs  scheduler_state.rs
bubocore/src/server/: client.rs
bubocore/src/static/syntaxes/: dummy.sublime-syntax
bubocore/src/util/: decimal_operations.rs
bubocoretui/: Cargo.toml
bubocoretui/src/: app.rs  commands.rs  components.rs  disk.rs  event.rs  lib.rs  link.rs  main.rs  markdown.rs  network.rs  ui.rs
bubocoretui/src/components/: command_palette.rs  devices.rs  editor.rs  files.rs  grid.rs  help.rs  logs.rs  markdownparser.rs  navigation.rs  options.rs  saveload.rs  screensaver.rs  splash.rs
bubocoretui/src/components/editor/: vim.rs  (+5 more)
bubocoretui/src/markdown/: parser.rs
bubocoretui/static/help/: about.md  commands.md  devices.md  editor.md  files.md  grid.md  logs.md  navigation.md  welcome.md
core/: Cargo.toml  README.md  build.rs
core/deprecated_examples/: bali_test_prog.rs  dummy_client.rs  play_aftertouch.rs  play_channelpressure.rs  play_clock.rs  play_control.rs  play_note.rs  play_program_change.rs  play_start_stop_reset_continue.rs  replacing_scripts.rs
core/examples/: bali_test_prog.rs  dummy_client.rs  embedded_logging.rs  play_aftertouch.rs  play_channelpressure.rs  play_clock.rs  play_control.rs  play_note.rs  play_program_change.rs  play_start_stop_reset_continue.rs  replacing_scripts.rs  run_lang.rs  standalone_logging.rs
core/src/: clock.rs  compiler.rs  device_map.rs  error.rs  init.rs  lang.rs  lib.rs  logger.rs  main.rs  migration.rs  protocol.rs  relay_client.rs  scene.rs  schedule.rs  server.rs  shared_types.rs  transcoder.rs  util.rs  vm.rs  world.rs
core/src/compiler/: compilation_error.rs  compilation_state.rs  lua.rs
core/src/lang/: bali.rs  bob.rs  boinx.rs  control_asm.rs  dummylang.rs  environment_func.rs  evaluation_context.rs  event.rs  generator.rs  imp.rs  interpreter.rs  language_center.rs  lua.rs  rhai.rs  transcoder.rs  variable.rs
core/src/protocol/: audio_engine_proxy.rs  device.rs  error.rs  log.rs  message.rs  midi.rs  osc.rs  payload.rs
core/src/scene/: execution_mode.rs  frame.rs  line.rs  script.rs
core/src/schedule/: action_timing.rs  execution.rs  frame_index.rs  message.rs  notification.rs  playback.rs  scheduler_actions.rs  scheduler_state.rs
core/src/server/: client.rs  message.rs
core/src/util/: decimal_operations.rs  music.rs
core/src/vm/: control_asm.rs  environment_func.rs  evaluation_context.rs  event.rs  generator.rs  interpreter.rs  language.rs  language_center.rs  runner.rs  transcoder.rs  variable.rs
engine/: Cargo.toml  build.rs  lockfree.md
engine/src/: audio_tools.rs  constants.rs  device_selector.rs  effect_pool.rs  engine.rs  lib.rs  main.rs  modulation.rs  parser.rs  registry.rs  server.rs  timing.rs  track.rs  types.rs  voice.rs
engine/src/dsp/: adsr.rs  all_pass_filter.rs  biquad.rs  comb_filter.rs  dc_blocker.rs  delay_line.rs  feedback_delay.rs  interpolating_delay.rs  lfo.rs  math.rs  mod.rs  moog_ladder.rs  oscillators.rs  polyblep.rs  tables.rs  wavetables.rs
engine/src/memory/: mod.rs  pool.rs  predictive.rs  samplib.rs  voice.rs
engine/src/modules/: mod.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: client.rs  client_manager.rs  disk.rs  lib.rs  link.rs  main.rs  messages.rs  server_manager.rs
langs/: Cargo.toml  README.md
langs/examples/: run_lang.rs
langs/src/: bali.rs  bob.rs  boinx.rs  dummylang.rs  lib.rs  lua.rs  rhai.rs
langs/src/bali/: bali_ast.rs  bali_compiler.rs  bali_grammar.lalrpop
langs/src/bob/: README.md  bob_ast.rs  bob_compiler.rs  bob_grammar.lalrpop  bob_preprocess.rs  compile_expr.rs  context.rs  emit.rs  emit_runtime.rs  operators.rs
langs/src/boinx/: ast.rs  boinx.pest  parser.rs  position.rs
langs/src/dummylang/: dummyast.rs  dummycompiler.rs  dummygrammar.lalrpop
langs/src/forth/: factory.rs  interpreter.rs  mod.rs  parser.rs  types.rs  words.rs
relay/: Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.prebuilt  README.md  docker-compose.yml
relay/src/: main.rs  relay.rs  types.rs  web.rs
relay/web/templates/: index.html
server/: Cargo.toml  README.md
server/src/: audio.rs  client.rs  lib.rs  main.rs  message.rs  server.rs
solo-tui/: Cargo.toml  README.md
solo-tui/src/: app.rs  event.rs  main.rs  page.rs  popup.rs  ui.rs  widgets.rs
solo-tui/src/popup/: popup_value.rs
solo-tui/src/widgets/: configure_widget.rs  devices_widget.rs  edit_widget.rs  footer.rs  header.rs  log_widget.rs  scene_widget.rs
(+1273 files in other folders)
