[package]
name = "deep-bubocore"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
priority-queue = "2.1.2"
midir = "0.10.1"
rosc = "0.10.1"
rusty_link = "0.4.4"
thread-priority = "1.2.0"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }

[lib]
name = "bubocoreserver"
path = "src/lib.rs"
