[package]
name = "bubocore"
version = "0.1.0"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
midir = "0.10.1"
rosc = "0.10.1"
rusty_link = "0.4.4"
thread-priority = "1.2.0"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rand = "0.9.0"

[lib]
name = "bubocoreserver"
path = "src/lib.rs"

[[examples]]
name = "hello_world"

[[examples]]
name = "play_note"

[[examples]]
name = "play_control_change"

[[examples]]
name = "play_program_change"

[[examples]]
name = "play_aftertouch"

[[examples]]
name = "play_channelpressure"

[[examples]]
name = "play_start_stop_reset"

[[examples]]
name = "play_clock"

[[examples]]
name = "all_midi_messages"

[[examples]]
name = "cutting_midi_notes"


[[examples]]
name = "replacing_scripts"
