[package]
name = "bubocore"
version = "0.1.0"
edition = "2024"
default-run = "bubocore"


[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
midir = "0.10.1"
rosc = "0.10.1"
rusty_link = "0.4.4"
thread-priority = "1.2.0"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
rand = "0.9.0"
tokio = { version = "1.44.1", features = ["full"] }
lazy_static = "1.5.0"

[lib]
name = "bubocorelib"
path = "src/lib.rs"

[[bin]]
name = "bubocore"
path = "src/main.rs"
