[package]
name = "bubocore"
version = "0.1.0"
edition = "2024"
default-run = "bubocore"

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
midir = "0.10.1"
rosc = "0.10.1"
rusty_link = "0.4.4"
thread-priority = "1.2.0"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
rand = "0.9.0"
clap = { version = "4.5.34", features = ["derive"] }

# We don't need tokio when compiling the library
[target.'cfg(not(target_option_pkg = "lib"))'.dependencies]
tokio = { version = "1.44.1", features = ["full"] }

[lib]
name = "bubocorelib"
path = "src/lib.rs"

[[bin]]
name = "bubocore"
path = "src/main.rs"
