[package]
name = "core"
version = "0.1.0"
edition = "2024"
default-run = "sova_server"

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
midir = "0.10.1"
rosc = "0.10.1"
rusty_link = "0.4.4"
thread-priority = "1.2.0"
audio_thread_priority = "0.32"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
toml = "0.8.0"
rand = "0.9.0"
clap = { version = "4.5.34", features = ["derive"] }
simple-easing = "1.0.1"
rmp-serde = "1.3.0"
zstd = "0.13"
crossbeam-channel = "0.5.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
pest = "2.8.3"
pest_derive = "2.8.3"
rhai = { version = "1.23.6", features = ["internals", "no_module", "no_time"] }
mlua = { version = "0.11.5", features = ["luau"] }
rand_chacha = "0.9.0"

# We don't need tokio when compiling the library
[target.'cfg(not(target_option_pkg = "lib"))'.dependencies]
tokio = { version = "1.44.1", features = ["full"] }
lazy_static = "1.5.0"

[lib]
name = "sova_core"
path = "src/lib.rs"

[[bin]]
name = "sova_server"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.0"
