[package]
name = "bubo_engine"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[features]
default = ["rt-safe"]
default-boxed = []
rt-safe = []

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
cpal = "0.15.3"
rosc = "0.11.4"
faust-types = { git = "https://github.com/Frando/rust-faust" }
faust-macro = { git = "https://github.com/Frando/rust-faust" }
faust-ui = { git = "https://github.com/Frando/rust-faust" }
strum = { version = "0.26", features = ["derive"] }
crossbeam-queue = "0.3.11"
crossbeam-channel = "0.5.15"
dashmap = "6.0"
fraction = { version = "0.15.3", default-features = false }
hound = "3.5"
thread-priority = "1.1"
