[package]
name = "sova-relay"
version = "0.1.0"
edition = "2021"
authors = ["Sova Team"]
description = "Relay server for remote Sova collaboration"

[[bin]]
name = "sova-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
zstd = "0.13"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"

[dev-dependencies]
tokio-test = "0.4"