[package]
name = "sova-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "sova_server"
path = "src/lib.rs"

[[bin]]
name = "sova_server"
path = "src/main.rs"

[features]
default = []
audio = ["dep:doux-sova"]

[dependencies]
sova_core = { path = "../core", package = "core" }
langs = { path = "../langs" }
tokio = { version = "1.44.1", features = ["full"] }
clap = { version = "4.5.34", features = ["derive"] }
thread-priority = "1.2.0"
serde = { version = "1.0.217", features = ["derive"] }
rmp-serde = "1.3.0"
zstd = "0.13"
crossbeam-channel = "0.5.15"
doux-sova = { git = "https://github.com/sova-org/doux", optional = true }
