[package]
name = "solo-tui"
version = "0.1.0"
description = "An example generated using the event-driven template"
authors = ["Tanguy Dubois <dubois.tanguy@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
sova_core = { path = "../core", package = "core" }
crossbeam-channel = "0.5.15"
tui-textarea = "0.7.0"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
