[package]
name = "sova-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sova_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rmp-serde = "1"
zstd = "0.13"
anyhow = "1"
thiserror = "1"
rusty_link = "0.4.4"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
regex = "1"
corelib = { path = "../../core", package = "core" }
bubo_engine = { path = "../../engine" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

